# PropMiner

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  PROD_TO_CONFIRM.MD  README.md  blake3_finalize_optimization_test  blake3_offload_test  propminer_ref_benchmarks  propminer_ref_tests
.github/workflows/: compile-check.yml  docker-build.yml  release.yml  tune-kit-release.yml
DISCUSSION_WITH_AI/plans/: 01-geforce-kernel-v2  02-ptr-array-grouped-gemm  03-stream-split-pregemm  04-triple-gpu-half-buffer  05-fuse-noise-noisinga-gemm  06-sigma-install-b-hash-batching  07-cccl-share-compaction  08-consumer-tma-legacy  09-sm120-upcast-hack-comprehensive-analysis  README.md
DISCUSSION_WITH_AI/plans/00-tmad-dominance/: BATCHED_BLAKE3_ANALYSIS.md  BLAKE3_FINALIZE_KERNEL_OPTIMIZATION_PLAN.md  BLAKE3_OFFLOAD_CORRECTNESS_REPORT.md  CPU_BLAKE3_OFFLOAD_TEST_PLAN.md  README.md  TMAD_MASTERY_COMPREHENSIVE_ANALYSIS.md  organize.sh
DISCUSSION_WITH_AI/plans/00-tmad-dominance/00-core-analysis/: ANALYSIS.md
DISCUSSION_WITH_AI/plans/00-tmad-dominance/01-competitor-analysis/: COMPETITOR_ANALYSIS.md
DISCUSSION_WITH_AI/plans/00-tmad-dominance/02-5090-architecture/: RTX5090_GB202_ARCHITECTURE_DEEP_DIVE.md
DISCUSSION_WITH_AI/plans/00-tmad-dominance/03-consensus-analysis/: CUPOW_CONSENSUS_ANALYSIS.md
DISCUSSION_WITH_AI/plans/00-tmad-dominance/04-cuda-kernel/: CUDA_KERNEL_OPTIMIZATIONS.md
DISCUSSION_WITH_AI/plans/00-tmad-dominance/05-systems-bottlenecks/: SYSTEMS_BOTTLENECKS_ANALYSIS.md
DISCUSSION_WITH_AI/plans/00-tmad-dominance/06-integration-plan/: PLAN.md
DISCUSSION_WITH_AI/plans/01-geforce-kernel-v2/: PLAN.md
DISCUSSION_WITH_AI/plans/02-ptr-array-grouped-gemm/: AUDIT.md  PLAN.md
DISCUSSION_WITH_AI/plans/07-cccl-share-compaction/: PLAN.md
DISCUSSION_WITH_AI/plans/08-consumer-tma-legacy/: PLAN.md
DISCUSSION_WITH_AI/war-room/01-geforce-kernel-v2/: AUDIT.md  MERGED_PLAN.md
DISCUSSION_WITH_AI/war-room/02-ptr-array-grouped-gemm/: PLAN.md  PROD_TO_CONFIRM.MD
DISCUSSION_WITH_AI/war-room/03-stream-split-pregemm/: PLAN.md
DISCUSSION_WITH_AI/war-room/04-triple-gpu-half-buffer/: PLAN.md
DISCUSSION_WITH_AI/war-room/05-fuse-noise-noisinga-gemm/: PLAN.md
DISCUSSION_WITH_AI/war-room/06-sigma-install-b-hash-batching/: PLAN.md
DISCUSSION_WITH_AI/war-room/09-sm120-upcast-hack-comprehensive-analysis/: PLAN.md
docs/: DEPLOY_CHECKLIST_CPU_GPU_OVERLAP.md  README.md  RTX5090_BLUEPRINT.md  RTX5090_LINUX_TASKS.md  TRIPLE_BUFFER_ONE_PAGER.md  examples.md  prod-tune-instructions.md
include/: multiplexer.h  propminer.h  propminer_config.h  simple_json.h  stratum.h
performance optimizations/: 01-native-tcgen05-tmem-gemm.md  02-tma-consumer-tile-loads.md  03-production-n262144.md  04-defer-share-gpu-work.md  05-kernel-knob-autotune.md  06-sm120-native-cutlass-int8-atom.md  07-pcie-gen5-psu-headroom.md  08-seed-generator-evaluation.md
research/: README.md
research/01-git-repos-mining/: CLONE_MANIFEST.txt  IMPLEMENTATION_OPPORTUNITIES.md  REPORT.md
research/02-peaminer-competitor-analysis/: COMPETITOR_ANALYSIS.md
research/02-rtx5090-specs/: REPORT.md
research/03-propminer-codebase/: REPORT.md
research/04-pearl-protocol/: REPORT.md
research/05-noise-hash/: REPORT.md
research/06-gpu-mining-fundamentals/: REPORT.md
research/07-community-resources/: REPORT.md
research/08-propminer-headroom/: REPORT.md
research/09-gemm-acceleration/: REPORT.md
research/10-synthesis-ph-gap/: REPORT.md
research/11-novel-pow-algorithm-design/: REPORT.md
results/: baseline_5090_sm120.json
scripts/: build.sh  build_and_benchmark.sh  compare_bench.sh  debug_geforce_v2.sh  debug_mining_status.sh  diagnose_geforce_v2.sh  docker_entrypoint.sh  download_release.sh  link_cuda_redist_libs.sh  local_host_tests.sh  move_md_to_war_room.sh  move_plans_to_war_room.sh  pre_deploy_gate.sh  profile_gemm_ncu.sh  remote_test_kit.sh  run.sh  run_mining.sh  run_on_rtx5090.sh  run_remaining_5090.sh  runpod_gpu_smoke.sh  salad_tune_and_remaining.sh  setup_cuda_env.sh  test_pool_register.py  test_tune_full_dry.sh  tune_blackwell_knobs.sh  tune_cluster_sweep.sh  tune_consumer_knobs.sh  tune_defaults.env  tune_kernel_knobs_common.sh  tune_mine_batch.sh  tune_prod_5090.sh  tune_runtime_full.sh  tune_runtime_prod.sh  tune_runtime_safe.sh  validate_all_local.sh  validate_defer_share.sh  validate_geforce_kernel_build.sh  validate_host_sync_hashrate.sh  validate_knob_manifest.sh  validate_seed_path.sh  (+4 more)
scripts/salad/: kryptex.env.example  run.sh  salad_restart_and_verify.sh  ubuntu24_one_liner.sh  ubuntu24_one_liner_fast.oneline  ubuntu24_one_liner_fast.sh  ubuntu24_one_liner_tune.sh
src/cuda/driver/: cuda_driver.cpp  cuda_driver.h
src/cuda/include/: blake3.cuh  noise_gen.cuh  pow_utils.cuh  result_buffer.h  work_queue.h
src/cuda/kernels/: pearlhash_kernel.cu
src/host/: benchmarks.cpp  benchmarks_rigorous.cpp  main.cpp  propminer_api.cpp  tests.cpp
src/host/multiplexer/: multiplexer.cpp
src/host/pearl/: async_b_stream.cpp  async_b_stream.h  bincode_encoder.cpp  bincode_encoder.h  cuda_compat.h  env_flags.h  env_tuning.h  gpu_tuner.cpp  gpu_tuner.h  gpu_worker.cpp  gpu_worker.h  grpc_client.cpp  grpc_client.h  hashrate_metrics.h  host_signal_header.cpp  host_signal_header.h  job_bus.cpp  job_bus.h  job_key.cpp  job_key.h  kernel_knob_cache.cpp  kernel_knob_cache.h  merkle_utils.h  mine_batch_cache.cpp  mine_batch_cache.h  pearl_blake3.cpp  pearl_blake3.h  pearl_capi_wrapper.cpp  pearl_capi_wrapper.h  pearl_challenge.cpp  pearl_challenge.h  pearl_mining_capi.h  pearl_mining_wrapper.cpp  pearl_mining_wrapper.h  pearl_stratum_client.cpp  pearl_stratum_client.h  pearl_types.cpp  pearl_types.h  pow_target_utils.cpp  pow_target_utils.h  (+20 more)
src/host/pearl/proto/: mining_v2.cpp  mining_v2.h
src/host/stratum/: simple_json.cpp  stratum.cpp
src/host/tests/: blake3_finalize_optimization_test.cpp  blake3_offload_test.cpp  blake3_reference.c  blake3_reference.h  ref_blake3.cpp  ref_blake3.h  ref_pearl.cpp  ref_pearl.h  transcript_mainloop_safety_test.cpp  workspace_transcript_size_test.cpp
